Nov 20-21, 1999
  - implemented direct editing of module/submod names on the canvas
  - implemented drag&drop of modules from the tree to the canvas
  - implemented module properties dialog
  - TBD: comment handling in properties dialogs!!!
  - changed appendTo to append in makened.tcl
  - renamed arrays: ddfields()-->ned_attlist(), ddict()-->ned_attr(), ddesc-->ned_desc()
  - several bugs fixed
Nov 30, 1999
  - bugfix in drawItemRecursive
Dec 2, 1999
  - implemented Imports, Channel, Network Properties dialogs
  - adjusted tree-view context menus
Dec 5, 1999
  - compiled with MSVC. enbf.h added. Removed changing slashes to backslashes
    in OMNETPP_GNED_DIR and ..BITMAP_PATH on Win32 because Tcl/Tk accepts both.
  - added generated files enbf.tab.c and lex.yy.c to CVS to make it possible to
    build GNED where flex/bison is not available
Dec 5,1999
  - Makefile.vc added
Dec 6, 1999
  - adapted to Tcl8.2: font size changed.
  - improved dialog box positioning
  - added label-entry-chooser to widgets.tcl
Dec 19, 1999
  - wsize proc added to widgets.tcl
  - font changes
------ omnetpp-2.0b3 released ------
Mar 27, 2000
 - bugfix: conditional (?:) operator caused parse error [reported by Niko]
Apr 10, 2000
 - in the C++ sources, TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
Apr 13, 2000
 - ebnf.y: changed operator precedence to bind ||,&& thighter than ?:
   [suggested by Niko]
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
May 19,2000
 - fixed <Ctrl-H> in text editor
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
July 17, 2000
 - accepts NED files on the command line
July 26, 2000
 - minor fixes on Edit|Find
Aug 7, 2000
 - makefile changes for RPM support
Aug 26, 2000
 - added .gnedrc
 - find/replace operation improved
 - implemented "find next"
 - find/replace dialog contents is now preserved